Fix incorrect claims about text/list container scrollability
Text and list containers are internally scrollable by the firmware
when they have isEventCapture: 1. SCROLL_TOP/BOTTOM events are
boundary events emitted when the user reaches the scroll limits,
not raw gesture events. Verified against SDK source and app code.

--- a/G2.md
+++ b/G2.md
@@ -114,8 +114,10 @@ new TextContainerProperty({
 - `rebuildPageContainer`: max **1000 characters** (same as startup)
 
 **Text rendering behaviour:**
-- Text wraps at container width, but there is no internal scrolling – text renders from the top and clips at the bottom
-- To "scroll" text, you must paginate it yourself and call `rebuildPageContainer` to show the next page (full redraw)
+- Text wraps at container width. If the content overflows the container height and the container has `isEventCapture: 1`, the firmware scrolls the text internally – the user can scroll through the overflow with swipe/ring gestures
+- `SCROLL_TOP_EVENT` and `SCROLL_BOTTOM_EVENT` are emitted when the user reaches the top or bottom boundary of the internal scroll – they are boundary events, not raw gesture events
+- In practice, most apps manually paginate text anyway (splitting into ~400-char pages) for better UX: controlled page breaks, progress indicators, and staying within the 1000-char content limit of `rebuildPageContainer`
+- Containers without `isEventCapture: 1` do not receive scroll input, so overflow text will be clipped
 - `\n` works for line breaks
 - Unicode characters work (e.g. `▲`, `━`, `─`, arrows) – useful for progress bars and indicators
 - Approximate capacity: ~400–500 characters fill a full-screen (576x288) text container, depending on character width
@@ -127,7 +129,7 @@ new TextContainerProperty({
 - Requires matching `containerID` and `containerName`
 - Has `contentOffset` and `contentLength` for partial replacement within the string
 - Returns `boolean` (success/failure)
-- **Caveat:** On the simulator, this still causes a visual redraw. On real hardware, it's smoother but text still renders from the top – there is no scroll position to preserve.
+- **Caveat:** On the simulator, this still causes a visual redraw. On real hardware, it's smoother.
 
 ```typescript
 await bridge.textContainerUpgrade(new TextContainerUpgrade({
@@ -175,7 +177,8 @@ new ListContainerProperty({
 | `itemName` | string[] | max 64 chars each | The text label for each item |
 
 **List behaviour:**
-- Scroll events (SCROLL_TOP/SCROLL_BOTTOM) move the selection highlight natively on the device – no `rebuildPageContainer` needed for scrolling
+- The firmware handles scrolling natively – scroll gestures move the selection highlight on the device without any app intervention. No `rebuildPageContainer` needed for scrolling through items
+- `SCROLL_TOP_EVENT` and `SCROLL_BOTTOM_EVENT` are emitted only when the user reaches the top or bottom boundary of the list (boundary events, not every scroll gesture)
 - Click events report `currentSelectItemIndex` and `currentSelectItemName` via `listEvent`
 - No custom styling per item (no per-item colours, icons, or secondary text)
 - No item height control – the firmware calculates item height from `containerHeight / itemCount`
@@ -229,8 +232,8 @@ new ImageContainerProperty({
 | Event | Value | Source |
 |---|---|---|
 | `CLICK_EVENT` | 0 | Ring tap, temple tap |
-| `SCROLL_TOP_EVENT` | 1 | Ring scroll up, swipe forward |
-| `SCROLL_BOTTOM_EVENT` | 2 | Ring scroll down, swipe back |
+| `SCROLL_TOP_EVENT` | 1 | Emitted when internal scroll reaches the top boundary |
+| `SCROLL_BOTTOM_EVENT` | 2 | Emitted when internal scroll reaches the bottom boundary |
 | `DOUBLE_CLICK_EVENT` | 3 | Ring double-tap, temple double-tap |
 | `FOREGROUND_ENTER_EVENT` | 4 | App comes to foreground |
 | `FOREGROUND_EXIT_EVENT` | 5 | App goes to background |
@@ -269,7 +272,7 @@ type EvenHubEvent = {
 
 2. **Missing `currentSelectItemIndex`:** The simulator (and sometimes real hardware) omits `currentSelectItemIndex` for the first list item (index 0). Fall back to tracking `selectedIndex` in your app state.
 
-3. **Event routing depends on `isEventCapture`:** The container with `isEventCapture: 1` determines whether you get `listEvent` vs `textEvent`. If a list has capture, scrolls come as `listEvent`. If text has capture, scrolls come as `textEvent`.
+3. **Event routing depends on `isEventCapture`:** The container with `isEventCapture: 1` determines whether you get `listEvent` vs `textEvent`. If a list has capture, scroll gestures are handled natively by the firmware and boundary events come as `listEvent`. If text has capture, the firmware scrolls the text internally and boundary events come as `textEvent`.
 
 4. **Simulator vs real device:** The simulator sends `sysEvent` for button clicks, while real hardware sends `textEvent` or `listEvent` depending on the active container. Handle all three event sources.
 
@@ -306,7 +309,7 @@ await bridge.rebuildPageContainer(
 )
 ```
 
-**Behaviour:** Full redraw – all containers are destroyed and recreated. Any scroll position or selection state is lost. On real hardware this causes a brief flicker.
+**Behaviour:** Full redraw – all containers are destroyed and recreated. Any internal scroll position or list selection state is lost. On real hardware this causes a brief flicker.
 
 **Fields:** Same as `createStartUpPageContainer`.
 
@@ -403,7 +406,7 @@ const value = await bridge.getLocalStorage('key') // returns string
 - No font size, weight, or family control
 - No background colour or fill on containers
 - No per-item styling in lists
-- No internal scrolling in text containers
+- No programmatic scroll position control – the firmware handles internal scrolling, but there is no API to get or set the scroll offset
 - No animations or transitions
 - Image containers are heavily constrained (max 200x100, greyscale only)
 
@@ -497,4 +500,4 @@ new ListContainerProperty({
 
 ### Page flipping for long text
 
-Text doesn't scroll – split into pages of ~400–500 chars at word boundaries. Track `pageIndex`, rebuild page on scroll. Show page indicator in header or footer container.
+Although text containers scroll internally for overflow content, many apps choose to pre-paginate text into ~400–500 char pages at word boundaries. This gives better UX: controlled page breaks, progress indicators, and avoidance of the 1000-char `rebuildPageContainer` content limit. Track `pageIndex`, rebuild page on `SCROLL_BOTTOM_EVENT`/`SCROLL_TOP_EVENT`. Show page indicator in header or footer container.
