Enhance image container documentation
Add green micro-LED display details, 4-bit greyscale explanation,
image data format options (PNG bytes, raw pixels, base64), tiling
behaviour, processing advice (no 1-bit dithering, BT.601 luminance),
and correct the SDK's documented 200x100 size limits which are
exceeded in practice (stars app uses 576x232).

--- a/G2.md
+++ b/G2.md
@@ -35,8 +35,9 @@ npm install @evenrealities/even_hub_sdk
 
 ## G2 hardware
 
-- Dual micro-LED displays, synced via physical FPC (not wireless)
+- Dual micro-LED displays (green), synced via physical FPC (not wireless)
 - 576x288 pixel canvas per eye
+- 4-bit greyscale – 16 shades of green. White pixels appear as bright green on the display; black pixels are off
 - BLE 5.x – ~28m real-world range, ~9dB more power than G1
 - Microphone (accessible via SDK)
 - Touch gestures on temple tips
@@ -48,7 +49,7 @@ npm install @evenrealities/even_hub_sdk
 
 ### Canvas
 
-576x288 pixels. Coordinate system: origin (0, 0) at top-left, X right, Y down. Greyscale display – colours map to grey levels (0–15 or 0–16 depending on container type).
+576x288 pixels. Coordinate system: origin (0, 0) at top-left, X right, Y down. Green micro-LED display – all colours are converted to 4-bit greyscale (16 levels of green) by the host app before transmission. Border colour ranges vary slightly by container type (0–15 for list, 0–16 for text).
 
 ### Container model
 
@@ -69,8 +70,8 @@ All container types share these layout properties:
 |---|---|---|---|
 | `xPosition` | number | 0–576 | Left edge in pixels |
 | `yPosition` | number | 0–288 | Top edge in pixels |
-| `width` | number | 0–576 (list/text), 20–200 (image) | |
-| `height` | number | 0–288 (list/text), 20–100 (image) | |
+| `width` | number | 0–576 | SDK documents 20–200 for images, but larger sizes work |
+| `height` | number | 0–288 | SDK documents 20–100 for images, but larger sizes work |
 | `containerID` | number | any | Unique per page, used for updates |
 | `containerName` | string | max 16 chars | Unique per page, used for updates |
 | `isEventCapture` | number | 0 or 1 | Exactly one container must be 1 |
@@ -190,7 +191,7 @@ new ListContainerProperty({
 
 ### Image containers (`ImageContainerProperty`)
 
-The most constrained container type. Small, greyscale-only images.
+Displays greyscale images on the glasses. The host app converts all image data to 4-bit greyscale (16 shades of green) before sending to the device.
 
 ```typescript
 new ImageContainerProperty({
@@ -205,25 +206,38 @@ new ImageContainerProperty({
 
 | Constraint | Value |
 |---|---|
-| Width | 20–200 px |
-| Height | 20–100 px |
+| Width | SDK documents 20–200 px, but larger sizes (up to 576) work in practice |
+| Height | SDK documents 20–100 px, but larger sizes (up to 288) work in practice |
 | Colour | Converted to 4-bit greyscale (`imageToGray4`) by the host |
 | Data formats | `number[]`, `Uint8Array`, `ArrayBuffer`, or base64 string |
 | Concurrent sends | **Not allowed** – queue image updates sequentially |
 | Startup phase | Cannot send image data during `createStartUpPageContainer` – create an empty placeholder, then update via `updateImageRawData` |
+| Tiling | If image data is smaller than the container dimensions, the hardware tiles (repeats) it – always match image size to container size |
 
 **`ImageRawDataUpdate` fields:**
 - `containerID` – must match the image container
 - `containerName` – must match the image container
-- `imageData` – raw pixel data as `number[]`, `Uint8Array`, `ArrayBuffer`, or base64 string
+- `imageData` – image data as `number[]`, `Uint8Array`, `ArrayBuffer`, or base64 string
+
+**`imageData` format:**
+
+The SDK accepts multiple formats and the host app handles decoding:
+- **`number[]`** (recommended) – can be either PNG file bytes (`Array.from(new Uint8Array(pngBuffer))`) or raw greyscale pixel values (one byte per pixel)
+- **base64 `string`** – base64-encoded PNG (e.g. from `canvas.toDataURL('image/png')` with the `data:image/png;base64,` prefix stripped)
+- **`Uint8Array`** or **`ArrayBuffer`** – the SDK auto-converts these to `number[]` during serialisation
+
+The host app's `imageToGray4` process handles the final conversion to 4-bit greyscale regardless of input format.
 
 **Advanced fields** (in `ImageRawDataUpdateFields`, for fragmented transfers):
 - `mapSessionId`, `mapTotalSize`, `compressMode`, `mapFragmentIndex`, `mapFragmentPacketSize`, `mapRawData`
 
-**Practical advice:**
-- Keep images simple – single-colour icons, logos
+**Image processing advice:**
+- Send greyscale images – colour information is discarded by the host's 4-bit conversion
+- Do not perform 1-bit dithering in your app – the host does better 4-bit downsampling; manual Floyd-Steinberg dithering creates noisy green dots on the display
+- Match image dimensions to container dimensions to prevent tiling
+- For best results: resize to fit container (preserve aspect ratio), centre on a black canvas (black = off on micro-LED), convert to greyscale (BT.601 luminance: `0.299R + 0.587G + 0.114B`), encode as PNG, send as `number[]` or base64
+- Keep images simple – the 4-bit conversion (16 levels) means detailed images lose quality
 - Glasses memory is limited – avoid frequent image updates
-- The host converts to 4-bit grey (16 levels) – detailed images lose quality
 
 ## Input events
 
@@ -331,17 +345,27 @@ await bridge.textContainerUpgrade(new TextContainerUpgrade({
 
 ### `updateImageRawData`
 
-Updates image data for an existing image container.
+Updates image data for an existing image container. Must be called after page creation – image containers are empty placeholders until this is called.
 
 ```typescript
+// Send as PNG byte array
+const pngBytes = Array.from(new Uint8Array(await pngBlob.arrayBuffer()));
 await bridge.updateImageRawData(new ImageRawDataUpdate({
   containerID: 3,
   containerName: 'logo',
-  imageData: pixelBuffer,
+  imageData: pngBytes,
+}))
+
+// Or send as base64 PNG string
+const base64 = canvas.toDataURL('image/png').replace(/^data:image\/png;base64,/, '');
+await bridge.updateImageRawData(new ImageRawDataUpdate({
+  containerID: 3,
+  containerName: 'logo',
+  imageData: base64,
 }))
 ```
 
-Returns `ImageRawDataUpdateResult` (success/imageException/imageSizeInvalid/imageToGray4Failed/sendFailed).
+Returns `ImageRawDataUpdateResult` (success/imageException/imageSizeInvalid/imageToGray4Failed/sendFailed). Do not send concurrent image updates – wait for one to complete before starting the next.
 
 ### `shutDownPageContainer`
 
@@ -408,7 +432,7 @@ const value = await bridge.getLocalStorage('key') // returns string
 - No per-item styling in lists
 - No programmatic scroll position control – the firmware handles internal scrolling, but there is no API to get or set the scroll offset
 - No animations or transitions
-- Image containers are heavily constrained (max 200x100, greyscale only)
+- Image containers are greyscale only (4-bit, 16 levels)
 
 ## Error codes
 
@@ -435,7 +459,7 @@ Returns `boolean`. Internal codes: `APP_REQUEST_UPGRADE_TEXT_DATA_SUCCESS` / `AP
 |---|---|
 | success | OK |
 | imageException | Image processing error |
-| imageSizeInvalid | Dimensions outside 20–200 x 20–100 |
+| imageSizeInvalid | Image dimensions don't match container or are out of range |
 | imageToGray4Failed | Greyscale conversion failed |
 | sendFailed | BLE send failed |
 
