Add table of contents for easier navigation

--- a/G2.md
+++ b/G2.md
@@ -1,5 +1,38 @@
 # Even Realities G2 – development notes
 
+- [Overview](#overview)
+- [Architecture](#architecture)
+- [Development flow](#development-flow)
+- [G2 hardware](#g2-hardware)
+- [Display and UI system](#display-and-ui-system)
+  - [Canvas](#canvas)
+  - [Container model](#container-model)
+  - [Shared container properties](#shared-container-properties)
+  - [Border and decoration](#border-and-decoration)
+  - [Text containers](#text-containers-textcontainerproperty)
+  - [List containers](#list-containers-listcontainerproperty)
+  - [Image containers](#image-containers-imagecontainerproperty)
+- [Input events](#input-events)
+  - [Event types](#event-types-oseventtypelist)
+  - [Event delivery](#event-delivery)
+  - [Event quirks](#event-quirks-critical-for-real-world-apps)
+- [Page lifecycle](#page-lifecycle)
+  - [createStartUpPageContainer](#createstartuppagecontainer)
+  - [rebuildPageContainer](#rebuildpagecontainer)
+  - [textContainerUpgrade](#textcontainerupgrade)
+  - [updateImageRawData](#updateimagerawdata)
+  - [shutDownPageContainer](#shutdownpagecontainer)
+- [Audio](#audio)
+- [Device info](#device-info)
+- [User info](#user-info)
+- [Local storage](#local-storage)
+- [What the SDK does NOT expose](#what-the-sdk-does-not-expose)
+- [Error codes](#error-codes)
+- [SDK JSON compatibility](#sdk-json-compatibility)
+- [UI patterns from real apps](#ui-patterns-from-real-apps)
+
+---
+
 ## Overview
 
 The G2 are smart glasses with dual micro-LED displays (one per lens), no camera, no speaker. Privacy-focused design. Paired with the R1 control ring for input. Connected to iPhone via BLE 5.x (~28m range).
