Add browser UI component library docs and refine architecture section

--- a/G2.md
+++ b/G2.md
@@ -3,6 +3,7 @@
 - [Overview](#overview)
 - [Architecture](#architecture)
 - [Development flow](#development-flow)
+- [Browser UI component library](#browser-ui-component-library)
 - [G2 hardware](#g2-hardware)
 - [Display and UI system](#display-and-ui-system)
   - [Canvas](#canvas)
@@ -39,32 +40,109 @@ The G2 are smart glasses with dual micro-LED displays (one per lens), no camera,
 
 ## Architecture
 
-Even Hub apps are **web apps** running inside a WebView in the Even App (Flutter, iPhone). There is no web server involved.
+Even Hub apps are **regular web apps hosted on your own server** (any hosting – Vercel, Cloudflare, your own VPS, etc.). The iPhone acts purely as a proxy between your web app and the glasses.
 
 ```
-[Web App] <--WebView JS bridge--> [Even App (Flutter/iPhone)] <--BLE--> [G2 Glasses]
+[Your server] <--HTTPS--> [iPhone WebView] <--BLE--> [G2 Glasses]
 ```
 
-- The Even App hosts a `flutter_inappwebview`. When you launch an Even Hub app, it loads the web page inside this WebView.
-- The SDK provides a JS bridge (`EvenAppBridge`) injected into `window`. Communication uses `flutter_inappwebview`'s `callHandler('evenAppMessage', ...)` – native WebView message passing, not HTTP.
-- The Flutter app handles all BLE. Your web app never touches Bluetooth directly.
+- **Your web app** runs on your server, with its own backend, database, API keys – like any web app.
+- **The iPhone** runs the Even App (Flutter), which opens your web app's URL in a `flutter_inappwebview`. The iPhone does not run your app logic – it just loads your page and relays messages to the glasses over BLE.
+- **The glasses** are a display + input peripheral. They render UI containers sent via BLE and send back input events (taps, scrolls). No code runs on the glasses.
+
+The SDK injects a JS bridge (`EvenAppBridge`) into the WebView's `window` object. Your frontend JS calls this bridge to control the glasses display and receive input events. The bridge uses `flutter_inappwebview`'s `callHandler('evenAppMessage', ...)` – native WebView message passing, not HTTP.
 
 ### Two-way communication
 
-- **Web -> App:** JS calls `bridge.callEvenApp(method, params)` which sends a `call_even_app_method` message through the WebView bridge. The Flutter side executes it and returns the result.
-- **App -> Web:** The Flutter side calls `window._listenEvenAppMessage(...)` to push events (device status, glasses UI events, audio PCM) into the WebView.
+- **Web -> Glasses:** Your JS calls `bridge.callEvenApp(method, params)` which sends a message through the WebView bridge. The Flutter app relays it over BLE to the glasses.
+- **Glasses -> Web:** Input events and status updates travel back over BLE to the Flutter app, which calls `window._listenEvenAppMessage(...)` to push them into your WebView.
+
+### Implications for app design
+
+- Your backend can hold API keys, do heavy computation, call third-party APIs – the glasses UI is just a thin frontend
+- Standard web security applies: session tokens, server-side secrets, HTTPS
+- The WebView has normal browser capabilities (fetch, localStorage, etc.) in addition to the G2 bridge
 
 ## Development flow
 
 1. Build a web app (any framework) that imports `@evenrealities/even_hub_sdk`
-2. During development, run locally – the Even App loads your localhost URL in its WebView
-3. For production, deploy as a hosted web page – the Even App loads it from that URL
+2. During development, run locally – the Even App loads your `localhost` URL in its WebView
+3. For production, deploy to any hosting – the Even App loads it from that URL
 
 SDK: <https://www.npmjs.com/package/@evenrealities/even_hub_sdk>
 
 ```bash
 npm install @evenrealities/even_hub_sdk
 ```
+
+## Browser UI component library
+
+The companion settings/config page that runs in the WebView (not the glasses display) can use **`@jappyjan/even-realities-ui`** – a React component library aligned to Even Realities design guidelines.
+
+NPM: <https://www.npmjs.com/package/@jappyjan/even-realities-ui>
+
+```bash
+npm install @jappyjan/even-realities-ui
+```
+
+- **Peer dependencies:** React 19, ReactDOM 19
+- **Styling:** Tailwind-based. Uses `clsx` + `tailwind-merge` internally. Import `@jappyjan/even-realities-ui/styles.css` once in your app.
+- **License:** Proprietary
+- **No public source repo or docs** – the package includes Storybook config but no hosted instance is available.
+
+### Entry points
+
+| Import path | Description |
+|---|---|
+| `@jappyjan/even-realities-ui` | Re-exports everything (components + icons + tokens + utils) |
+| `@jappyjan/even-realities-ui/components` | UI components only |
+| `@jappyjan/even-realities-ui/icons` | Icon components only |
+| `@jappyjan/even-realities-ui/tokens` | Design tokens (currently empty) |
+| `@jappyjan/even-realities-ui/styles.css` | CSS stylesheet |
+
+### Components
+
+| Component | Notes |
+|---|---|
+| `Button` | `variant`: `default`, `accent`, `primary`, `negative`. `size`: `sm`, `md`, `lg` |
+| `IconButton` | Same variants/sizes as Button, wraps an icon child |
+| `Card`, `CardHeader`, `CardContent`, `CardFooter` | Card layout |
+| `Text` | Polymorphic (`as` prop). `variant`: `title-xl`, `title-lg`, `title-1`, `title-2`, `body-1`, `body-2`, `subtitle`, `detail` |
+| `Input` | Standard input, `ForwardRef<HTMLInputElement>` |
+| `Textarea` | Standard textarea |
+| `Select` | Standard select |
+| `Checkbox` | `label`, `description` props |
+| `Radio` | `label`, `description` props |
+| `Switch` | `label` prop |
+| `Badge` | Span-based |
+| `Chip` | `size`: `sm`, `lg`. `onRemove` callback |
+| `Divider` | `<hr>` wrapper |
+
+### Icons (90+)
+
+All icons extend `IconBase` (SVG `ForwardRef` with `size` and `title` props). Notable categories:
+
+- **Hardware:** `GlassesIcon`, `GlassesBatteryIcon`, `GlassesChargingIcon`, `CaseIcon`, `CaseBatteryIcon`, `BluetoothIcon`, `BluetoothDisconnectedIcon`, `WearDetectIcon`, `ScreenOffIcon`
+- **Battery:** `BatteryFullIcon`, `Battery75PercentIcon`, `Battery50PercentIcon`, `BatteryLowIcon`, `BatteryDyingIcon`
+- **Navigation:** `BackIcon`, `ChevronBackIcon`, `ChevronDrillDownIcon`, `ChevronDrillInIcon`, `HomeMenuIcon`, `EvenHubMenuIcon`
+- **Actions:** `AddIcon`, `EditIcon`, `CopyIcon`, `TrashIcon`, `UndoIcon`, `RedoIcon`, `ShareIcon`, `PlayIcon`, `PauseIcon`
+- **Features:** `TranslateIcon`, `TranscribeIcon`, `TelepromptIcon`, `QuickNoteIcon`, `NavigateIcon`, `CalendarIcon`, `WeatherIcon`, `EvenAiIcon`
+- **Settings:** `SettingsIcon`, `BrightnessIcon`, `LanguagesIcon`, `InterfaceSettingsIcon`, `ThemeIcon`
+- **General:** `InfoIcon`, `HintIcon`, `NotificationIcon`, `CrossIcon`, `CompleteIcon`, `DotIcon`
+
+### Design tokens (CSS custom properties)
+
+- **Backgrounds:** `--color-bc-1` through `--color-bc-4`, `--color-bc-accent`, `--color-bc-highlight`
+- **Surfaces:** `--color-sc-*`
+- **Text:** `--color-tc-1`, `--color-tc-2`, `--color-tc-accent`, `--color-tc-green`, `--color-tc-red`
+- **Typography:** `--font-size-app-title-xl` through `--font-size-app-detail`
+- **Spacing:** `--space-0`, `--space-8`, `--space-12`, `--space-16`, `--space-20`, `--space-24`, `--space-28`, `--space-32`
+- **Layout:** `--layout-card-margin`, `--layout-page-padding`, `--layout-section-gap`
+- **Borders/Radii:** `--radius-sm`, `--radius-md`
+
+### Utility
+
+- **`cn(...inputs): string`** – `clsx` + `tailwind-merge` for composing class names.
 
 ## G2 hardware
 
