Fix event capture pattern for image-based apps
Hidden 1x1 list containers don't generate scroll events.
Use a full-screen text container behind the image instead –
this receives all event types including scroll.

--- a/G2.md
+++ b/G2.md
@@ -550,21 +550,44 @@ const empty = '─'.repeat(total - n)
 const bar = filled + empty
 ```
 
-### Hidden capture containers
+### Event capture for image-based apps
 
-When you need to receive events but don't want a visible list, create a 1x1 pixel list container off-screen or at (0,0):
+When your primary display is a full-screen image (Canvas-rendered UI, games, etc.), you need a separate container with `isEventCapture: 1` to receive input events since image containers don't have this property.
+
+**Use a text container, not a list.** A hidden 1×1 list with 1 item does NOT generate scroll events – there's nothing to scroll, so `SCROLL_TOP_EVENT` and `SCROLL_BOTTOM_EVENT` never fire. Only click/double-click events come through.
+
+Instead, place a full-screen text container (content: `' '`) **behind** the image. The text container receives all event types including scroll. The image container renders on top (higher container ID = drawn later), so the text is invisible:
 
 ```typescript
-new ListContainerProperty({
-  containerID: 99,
-  containerName: 'hidden-capture',
-  xPosition: 0, yPosition: 0, width: 1, height: 1,
-  isEventCapture: 1,
-  itemContainer: new ListItemContainerProperty({
-    itemCount: 1, itemWidth: 1, isItemSelectBorderEn: 0, itemName: [' '],
-  }),
-})
+const config = {
+  containerTotalNum: 2,
+  textObject: [
+    new TextContainerProperty({
+      containerID: 1,
+      containerName: 'evt',
+      content: ' ',
+      xPosition: 0,
+      yPosition: 0,
+      width: 576,
+      height: 288,
+      isEventCapture: 1,
+      paddingLength: 0,
+    }),
+  ],
+  imageObject: [
+    new ImageContainerProperty({
+      containerID: 2,
+      containerName: 'screen',
+      xPosition: 0,
+      yPosition: 0,
+      width: 576,
+      height: 288,
+    }),
+  ],
+}
 ```
+
+This gives you click, double-click, scroll-top and scroll-bottom events while the image is fully visible. Events arrive as `textEvent` (not `listEvent`), so adjust your event handler accordingly.
 
 ### Page flipping for long text
 
