Add SDK initialisation, callEvenApp method, and minor details from official docs

--- a/G2.md
+++ b/G2.md
@@ -5,6 +5,7 @@
 - [Overview](#overview)
 - [Architecture](#architecture)
 - [Development flow](#development-flow)
+- [SDK initialisation](#sdk-initialisation)
 - [G2 hardware](#g2-hardware)
 - [Display and UI system](#display-and-ui-system)
   - [Canvas](#canvas)
@@ -24,6 +25,7 @@
   - [textContainerUpgrade](#textcontainerupgrade)
   - [updateImageRawData](#updateimagerawdata)
   - [shutDownPageContainer](#shutdownpagecontainer)
+  - [callEvenApp (generic escape hatch)](#callevenapp-generic-escape-hatch)
 - [Audio](#audio)
 - [Device info](#device-info)
 - [User info](#user-info)
@@ -75,6 +77,20 @@ SDK: <https://www.npmjs.com/package/@evenrealities/even_hub_sdk>
 
 ```bash
 npm install @evenrealities/even_hub_sdk
+```
+
+## SDK initialisation
+
+Two ways to get the bridge instance:
+
+```typescript
+import { waitForEvenAppBridge, EvenAppBridge } from '@evenrealities/even_hub_sdk'
+
+// Method 1: async wait (recommended) – resolves when bridge is ready
+const bridge = await waitForEvenAppBridge()
+
+// Method 2: synchronous singleton – only use after bridge is already initialised
+const bridge = EvenAppBridge.getInstance()
 ```
 
 ## G2 hardware
@@ -217,7 +233,7 @@ new ListContainerProperty({
 | Property | Type | Range | Notes |
 |---|---|---|---|
 | `itemCount` | number | 1–20 | Must match `itemName.length` |
-| `itemWidth` | number | pixels | Width of each item row. Usually `containerWidth - 2*padding` |
+| `itemWidth` | number | pixels | Width of each item row. `0` = auto-fill (firmware calculates width). Other values = fixed width in pixels. Usually `containerWidth - 2*padding` |
 | `isItemSelectBorderEn` | number | 0 or 1 | Show selection highlight border on current item |
 | `itemName` | string[] | max 64 chars each | The text label for each item |
 
@@ -420,6 +436,37 @@ await bridge.shutDownPageContainer(0) // 0 = immediate exit
 await bridge.shutDownPageContainer(1) // 1 = show exit confirmation to user
 ```
 
+### `callEvenApp` (generic escape hatch)
+
+Low-level method for calling any native Even App function by name. All the typed methods (`getDeviceInfo`, `createStartUpPageContainer`, etc.) are wrappers around this.
+
+```typescript
+import { EvenAppMethod } from '@evenrealities/even_hub_sdk'
+
+// Using the enum
+const user = await bridge.callEvenApp(EvenAppMethod.GetUserInfo)
+
+// Using a raw string (for undocumented or future methods)
+const result = await bridge.callEvenApp('someNativeMethod', { param: 'value' })
+```
+
+**`EvenAppMethod` enum:**
+
+| Enum value | Native method string |
+|---|---|
+| `GetUserInfo` | `'getUserInfo'` |
+| `GetGlassesInfo` | `'getGlassesInfo'` |
+| `SetLocalStorage` | `'setLocalStorage'` |
+| `GetLocalStorage` | `'getLocalStorage'` |
+| `CreateStartUpPageContainer` | `'createStartUpPageContainer'` |
+| `RebuildPageContainer` | `'rebuildPageContainer'` |
+| `UpdateImageRawData` | `'updateImageRawData'` |
+| `TextContainerUpgrade` | `'textContainerUpgrade'` |
+| `AudioControl` | `'audioControl'` |
+| `ShutDownPageContainer` | `'shutDownPageContainer'` |
+
+Note: `GetGlassesInfo` is the underlying native method name; the SDK's public `getDeviceInfo()` wraps it.
+
 ## Audio
 
 - `bridge.audioControl(true/false)` – open/close microphone
@@ -442,8 +489,12 @@ const device = await bridge.getDeviceInfo()
 
 Real-time monitoring via `bridge.onDeviceStatusChanged(callback)`. Returns an unsubscribe function.
 
+**`DeviceInfo.updateStatus(status)`** – Updates the device's status in-place, but only when `status.sn === device.sn` (the serial numbers must match; mismatched updates are silently ignored).
+
 Helper methods on `DeviceInfo`: `isGlasses()`, `isRing()`.
 Helper methods on `DeviceStatus`: `isConnected()`, `isConnecting()`, `isDisconnected()`, `isConnectionFailed()`, `isNone()`.
+
+Serialisation helpers on all models: `toJson()`, `fromJson(json)` (static), `createDefault()` (static, on `UserInfo` and `DeviceStatus`).
 
 ## User info
 
@@ -519,6 +570,12 @@ The SDK handles multiple key naming conventions from the host:
 - Proto-style: `Container_ID`
 
 All are accepted via `pickLoose()` which normalises keys by removing underscores and lowercasing. You only need to use camelCase in your code – the SDK handles the rest.
+
+Event data is also accepted in multiple shapes:
+- `data: { type: 'listEvent', jsonData: {...} }`
+- `data: { type: 'list_event', data: {...} }`
+- `data: [ 'list_event', {...} ]` (array format)
+- `data: { type: 'audioEvent', jsonData: { audioPcm: [...] } }`
 
 ## UI patterns from real apps
 
