Add example apps section

--- a/G2.md
+++ b/G2.md
@@ -39,6 +39,7 @@
   - [Running apps](#running-apps)
   - [App structure](#app-structure)
   - [Packaging and deployment](#packaging-and-deployment)
+- [Example apps](#example-apps)
 
 ---
 
@@ -894,3 +895,12 @@ Common scripts (see [reddit](https://github.com/fuutott/rdt-even-g2-rddit-client
 ```
 
 `evenhub-cli pack` builds a distributable package from `vite build` output. `evenhub-cli qr` generates a QR code for sideloading onto the Even App.
+
+## Example apps
+
+| App | Description | Source |
+|-----|-------------|--------|
+| [tesla](https://github.com/nickustinov/tesla-even-g2) | Tesla vehicle status and controls | Image-based rendering, backend server |
+| [weather](https://github.com/nickustinov/weather-even-g2) | Weather forecast display | Settings UI with even-realities-ui, plain CSS |
+| [pong](https://github.com/nickustinov/pong-even-g2) | Pong game | Canvas-rendered game, image container |
+| [snake](https://github.com/nickustinov/snake-even-g2) | Snake game | Canvas-rendered game, image container |
