--- a/G2.md
+++ b/G2.md
@@ -135,8 +135,8 @@ All container types share these layout properties:
 |---|---|---|---|
 | `xPosition` | number | 0–576 | Left edge in pixels |
 | `yPosition` | number | 0–288 | Top edge in pixels |
-| `width` | number | 0–576 | SDK documents 20–200 for images, but larger sizes work |
-| `height` | number | 0–288 | SDK documents 20–100 for images, but larger sizes work |
+| `width` | number | 0–576 | 20–200 for images |
+| `height` | number | 0–288 | 20–100 for images |
 | `containerID` | number | any | Unique per page, used for updates |
 | `containerName` | string | max 16 chars | Unique per page, used for updates |
 | `isEventCapture` | number | 0 or 1 | Exactly one container must be 1 |
@@ -271,8 +271,8 @@ new ImageContainerProperty({
 
 | Constraint | Value |
 |---|---|
-| Width | SDK documents 20–200 px, but larger sizes (up to 576) work in practice |
-| Height | SDK documents 20–100 px, but larger sizes (up to 288) work in practice |
+| Width | 20–200 px |
+| Height | 20–100 px |
 | Colour | Converted to 4-bit greyscale (`imageToGray4`) by the host |
 | Data formats | `number[]`, `Uint8Array`, `ArrayBuffer`, or base64 string |
 | Concurrent sends | **Not allowed** – queue image updates sequentially |
@@ -614,11 +614,11 @@ const bar = filled + empty
 
 ### Event capture for image-based apps
 
-When your primary display is a full-screen image (Canvas-rendered UI, games, etc.), you need a separate container with `isEventCapture: 1` to receive input events since image containers don't have this property.
+When your primary display is an image (Canvas-rendered UI, games, etc.), you need a separate container with `isEventCapture: 1` to receive input events since image containers don't have this property.
 
 **Use a text container, not a list.** A hidden 1×1 list with 1 item does NOT generate scroll events – there's nothing to scroll, so `SCROLL_TOP_EVENT` and `SCROLL_BOTTOM_EVENT` never fire. Only click/double-click events come through.
 
-Instead, place a full-screen text container (content: `' '`) **behind** the image. The text container receives all event types including scroll. The image container renders on top (higher container ID = drawn later), so the text is invisible:
+Place a full-screen text container (content: `' '`) **behind** the image. The text container receives all event types including scroll. The image container renders on top (higher container ID = drawn later), so the text is invisible behind it:
 
 ```typescript
 const config = {
@@ -640,16 +640,18 @@ const config = {
     new ImageContainerProperty({
       containerID: 2,
       containerName: 'screen',
-      xPosition: 0,
-      yPosition: 0,
-      width: 576,
-      height: 288,
+      xPosition: 188,
+      yPosition: 94,
+      width: 200,
+      height: 100,
     }),
   ],
 }
 ```
 
-This gives you click, double-click, scroll-top and scroll-bottom events while the image is fully visible. Events arrive as `textEvent` (not `listEvent`), so adjust your event handler accordingly.
+Note: image containers are limited to 200×100 px max, so they cannot cover the full 576×288 canvas. Centre the image container on screen (xPosition = (576−200)/2 = 188, yPosition = (288−100)/2 = 94) and use the text container's text or a black background to fill the rest.
+
+This gives you click, double-click, scroll-top and scroll-bottom events while the image is visible. Events arrive as `textEvent` (not `listEvent`), so adjust your event handler accordingly.
 
 ### Page flipping for long text
 
