Remove Even Hub portal upload step – not yet available

--- a/G2.md
+++ b/G2.md
@@ -1000,10 +1000,8 @@ Every Even Hub app needs an `app.json` at the project root. This describes the a
 #### Production packaging
 
 1. `npm run pack` – builds and creates a `.ehpk` file
-2. Log in: `npx evenhub login`
-3. Upload the `.ehpk` via the [Even Hub developer portal](https://evenhub.evenrealities.com)
 
-Add `*.ehpk` to `.gitignore`.
+The `.ehpk` format is for future submission to the Even Hub portal (not yet available). Add `*.ehpk` to `.gitignore`.
 
 ## Example apps
 
