Add font and Unicode support section with tested glyph availability

--- a/G2.md
+++ b/G2.md
@@ -13,6 +13,7 @@
   - [Shared container properties](#shared-container-properties)
   - [Border and decoration](#border-and-decoration)
   - [Text containers](#text-containers-textcontainerproperty)
+  - [Font and Unicode support](#font-and-unicode-support)
   - [List containers](#list-containers-listcontainerproperty)
   - [Image containers](#image-containers-imagecontainerproperty)
 - [Input events](#input-events)
@@ -206,6 +207,99 @@ await bridge.textContainerUpgrade(new TextContainerUpgrade({
   content: 'Updated text here',
 }))
 ```
+
+### Font and Unicode support
+
+The glasses firmware uses a single LVGL font baked into the firmware. There is no font selection, no font size control, and the font is **not monospaced** – different characters have different widths. The font includes a subset of Unicode – characters outside the font are silently skipped (no placeholder glyph is shown).
+
+Tested on the Even Hub Simulator (`@evenrealities/evenhub-simulator` v0.0.7, Feb 2025). Real hardware may differ.
+
+#### Supported characters
+
+**ASCII and Latin (U+0020–U+00FF)** – nearly complete. Missing only: U+00A8 ¨, U+00AF ¯, U+00B4 ´, U+00B5 µ, U+00B8 ¸
+
+**Box Drawing (U+2500–U+2573)** – most single-line and light/heavy characters work. Specifically supported:
+- U+2500–U+2503 (─ ━ │ ┃) – horizontal and vertical lines
+- U+250C–U+254B – corners, tees, and crosses (light, heavy, and mixed)
+- U+2550, U+255E, U+2561, U+256A, U+256D–U+2573 – selected double-line and rounded corners
+
+Missing from Box Drawing:
+- U+2504–U+250B – all dashed/dotted line variants (┄ ┅ ┆ ┇ ┈ ┉ ┊ ┋)
+- U+254C–U+254F – dash variants (╌ ╍ ╎ ╏)
+- U+2551–U+255D (except U+2550, U+255E) – most double-line box drawing
+- U+255F–U+2560, U+2562–U+2569, U+256B–U+256C – double-line intersections
+- U+2574–U+257F – all half-line segments (╴ ╵ ╶ ╷ ╸ ╹ ╺ ╻ ╼ ╽ ╾ ╿)
+
+**Block Elements (U+2580–U+259F)** – partial support. Lower blocks and left blocks work; upper half, right half, shades, and quadrants mostly do not.
+
+| Char | Code | Name | Status |
+|------|------|------|--------|
+| ▀ | U+2580 | Upper half block | missing |
+| ▁ | U+2581 | Lower one eighth block | supported |
+| ▂ | U+2582 | Lower one quarter block | supported |
+| ▃ | U+2583 | Lower three eighths block | supported |
+| ▄ | U+2584 | Lower half block | supported |
+| ▅ | U+2585 | Lower five eighths block | supported |
+| ▆ | U+2586 | Lower three quarters block | supported |
+| ▇ | U+2587 | Lower seven eighths block | supported |
+| █ | U+2588 | Full block | supported |
+| ▉ | U+2589 | Left seven eighths block | supported |
+| ▊ | U+258A | Left three quarters block | supported |
+| ▋ | U+258B | Left five eighths block | supported |
+| ▌ | U+258C | Left half block | supported |
+| ▍ | U+258D | Left three eighths block | supported |
+| ▎ | U+258E | Left one quarter block | supported |
+| ▏ | U+258F | Left one eighth block | supported |
+| ▐ | U+2590 | Right half block | missing |
+| ░ | U+2591 | Light shade | missing |
+| ▒ | U+2592 | Medium shade | supported |
+| ▓ | U+2593 | Dark shade | missing |
+| ▔ | U+2594 | Upper one eighth block | supported |
+| ▕ | U+2595 | Right one eighth block | supported |
+| ▖–▟ | U+2596–U+259F | Quadrant characters | all missing |
+
+**Geometric Shapes (U+25A0–U+25FF)** – selective support:
+
+Supported: ■ U+25A0, □ U+25A1, ▣ U+25A3, ▤ U+25A4, ▥ U+25A5, ▦ U+25A6, ▧ U+25A7, ▨ U+25A8, ▩ U+25A9, ▲ U+25B2, △ U+25B3, ▶ U+25B6, ▷ U+25B7, ▼ U+25BC, ▽ U+25BD, ◀ U+25C0, ◁ U+25C1, ◆ U+25C6, ◇ U+25C7, ◈ U+25C8, ◊ U+25CA, ○ U+25CB, ◌ U+25CC, ◎ U+25CE, ● U+25CF, ◐ U+25D0, ◑ U+25D1, ◢ U+25E2, ◣ U+25E3, ◤ U+25E4, ◥ U+25E5, ◯ U+25EF
+
+Missing: most other geometric shapes including small squares (U+25AA–U+25AB), rectangles, small triangles, circle segments, and everything from U+25F0 onward.
+
+**Arrows (U+2190–U+21FF)** – only basic arrows supported:
+
+Supported: ← U+2190, ↑ U+2191, → U+2192, ↓ U+2193, ↔ U+2194, ↕ U+2195, ↖ U+2196, ↗ U+2197, ↘ U+2198, ↙ U+2199, ⇒ U+21D2, ⇔ U+21D4
+
+Missing: all other arrows (U+219A–U+21FF) including double arrows (except ⇒ and ⇔), dashed arrows, wavy arrows, etc.
+
+**Misc Symbols (U+2600–U+263F)** – mostly missing:
+
+Supported: ★ U+2605, ☆ U+2606, ☉ U+2609, ☎ U+260E, ☏ U+260F, ☜ U+261C, ☞ U+261E
+
+Missing: ☀ ☁ ☂ ☃ (weather symbols), ☠ ☢ ☣ (hazard), ☮ ☯ (peace/yin-yang), ☺ ☻ (faces), and most other misc symbols.
+
+**Entirely missing ranges:**
+
+- Dingbats (U+2700–U+273F) – none supported
+- Weather emoji (U+1F300–U+1F321, U+1F324–U+1F32C) – none supported
+- Misc weather symbols (U+26C4–U+26C8) – none supported (⛄ ⛅ etc.)
+- Snowflake U+2744 ❄ – missing
+- Droplet U+1F4A7 💧 – missing
+
+#### Useful characters for apps
+
+For progress bars and UI:
+- `━` U+2501, `─` U+2500 – thick/thin horizontal lines
+- `█` U+2588, `▇▆▅▄▃▂▁` U+2587–U+2581 – full block and lower fractional blocks
+- `▏▎▍▌▋▊▉` U+258F–U+2589 – left fractional blocks
+- `▒` U+2592 – medium shade
+
+For game/diagram rendering:
+- `●` U+25CF, `○` U+25CB – filled/empty circles
+- `■` U+25A0, `□` U+25A1 – filled/empty squares
+- `▲△▶▷▼▽◀◁` – large triangles in all directions
+- `◢◣◤◥` U+25E2–U+25E5 – corner triangles
+- `│` U+2502, `─` U+2500 – vertical/horizontal lines
+- `┌┐└┘├┤┬┴┼` – box drawing corners and intersections
+- `★☆` U+2605–U+2606 – stars
 
 ### List containers (`ListContainerProperty`)
 
