--- a/G2.md
+++ b/G2.md
@@ -210,96 +210,153 @@ await bridge.textContainerUpgrade(new TextContainerUpgrade({
 
 ### Font and Unicode support
 
-The glasses firmware uses a single LVGL font baked into the firmware. There is no font selection, no font size control, and the font is **not monospaced** – different characters have different widths. The font includes a subset of Unicode – characters outside the font are silently skipped (no placeholder glyph is shown).
+The glasses firmware uses a single LVGL font baked into the firmware. There is no font selection, no font size control, and the font is **not monospaced** – different characters have different widths. Characters outside the font are silently skipped (no placeholder glyph is shown).
 
 Tested on the Even Hub Simulator (`@evenrealities/evenhub-simulator` v0.0.7, Feb 2025). Real hardware may differ.
 
-#### Supported characters
+#### Available glyphs
 
-**ASCII and Latin (U+0020–U+00FF)** – nearly complete. Missing only: U+00A8 ¨, U+00AF ¯, U+00B4 ´, U+00B5 µ, U+00B8 ¸
+**ASCII and Latin (U+0020–U+00FF)** – nearly complete (all printable characters except five):
 
-**Box Drawing (U+2500–U+2573)** – most single-line and light/heavy characters work. Specifically supported:
-- U+2500–U+2503 (─ ━ │ ┃) – horizontal and vertical lines
-- U+250C–U+254B – corners, tees, and crosses (light, heavy, and mixed)
-- U+2550, U+255E, U+2561, U+256A, U+256D–U+2573 – selected double-line and rounded corners
+| Char | Code | Description |
+|------|------|-------------|
+| `!` `"` `#` … `~` | U+0021–U+007E | All printable ASCII |
+| `¡` `¢` `£` … `ÿ` | U+00A1–U+00FF | Latin-1 Supplement (accented letters, symbols, etc.) |
 
-Missing from Box Drawing:
-- U+2504–U+250B – all dashed/dotted line variants (┄ ┅ ┆ ┇ ┈ ┉ ┊ ┋)
-- U+254C–U+254F – dash variants (╌ ╍ ╎ ╏)
-- U+2551–U+255D (except U+2550, U+255E) – most double-line box drawing
-- U+255F–U+2560, U+2562–U+2569, U+256B–U+256C – double-line intersections
-- U+2574–U+257F – all half-line segments (╴ ╵ ╶ ╷ ╸ ╹ ╺ ╻ ╼ ╽ ╾ ╿)
+**Arrows (U+2190–U+2199, U+21D2, U+21D4)**
 
-**Block Elements (U+2580–U+259F)** – partial support. Lower blocks and left blocks work; upper half, right half, shades, and quadrants mostly do not.
+| Char | Code | | Char | Code | | Char | Code |
+|------|------|-|------|------|-|------|------|
+| ← | U+2190 | | ↑ | U+2191 | | → | U+2192 |
+| ↓ | U+2193 | | ↔ | U+2194 | | ↕ | U+2195 |
+| ↖ | U+2196 | | ↗ | U+2197 | | ↘ | U+2198 |
+| ↙ | U+2199 | | ⇒ | U+21D2 | | ⇔ | U+21D4 |
 
-| Char | Code | Name | Status |
-|------|------|------|--------|
-| ▀ | U+2580 | Upper half block | missing |
-| ▁ | U+2581 | Lower one eighth block | supported |
-| ▂ | U+2582 | Lower one quarter block | supported |
-| ▃ | U+2583 | Lower three eighths block | supported |
-| ▄ | U+2584 | Lower half block | supported |
-| ▅ | U+2585 | Lower five eighths block | supported |
-| ▆ | U+2586 | Lower three quarters block | supported |
-| ▇ | U+2587 | Lower seven eighths block | supported |
-| █ | U+2588 | Full block | supported |
-| ▉ | U+2589 | Left seven eighths block | supported |
-| ▊ | U+258A | Left three quarters block | supported |
-| ▋ | U+258B | Left five eighths block | supported |
-| ▌ | U+258C | Left half block | supported |
-| ▍ | U+258D | Left three eighths block | supported |
-| ▎ | U+258E | Left one quarter block | supported |
-| ▏ | U+258F | Left one eighth block | supported |
-| ▐ | U+2590 | Right half block | missing |
-| ░ | U+2591 | Light shade | missing |
-| ▒ | U+2592 | Medium shade | supported |
-| ▓ | U+2593 | Dark shade | missing |
-| ▔ | U+2594 | Upper one eighth block | supported |
-| ▕ | U+2595 | Right one eighth block | supported |
-| ▖–▟ | U+2596–U+259F | Quadrant characters | all missing |
+**Box Drawing (U+2500–U+2573)** – single-line and light/heavy characters:
 
-**Geometric Shapes (U+25A0–U+25FF)** – selective support:
+| Char | Code | | Char | Code | | Char | Code | | Char | Code |
+|------|------|-|------|------|-|------|------|-|------|------|
+| ─ | U+2500 | | ━ | U+2501 | | │ | U+2502 | | ┃ | U+2503 |
+| ┌ | U+250C | | ┍ | U+250D | | ┎ | U+250E | | ┏ | U+250F |
+| ┐ | U+2510 | | ┑ | U+2511 | | ┒ | U+2512 | | ┓ | U+2513 |
+| └ | U+2514 | | ┕ | U+2515 | | ┖ | U+2516 | | ┗ | U+2517 |
+| ┘ | U+2518 | | ┙ | U+2519 | | ┚ | U+251A | | ┛ | U+251B |
+| ├ | U+251C | | ┝ | U+251D | | ┞ | U+251E | | ┟ | U+251F |
+| ┠ | U+2520 | | ┡ | U+2521 | | ┢ | U+2522 | | ┣ | U+2523 |
+| ┤ | U+2524 | | ┥ | U+2525 | | ┦ | U+2526 | | ┧ | U+2527 |
+| ┨ | U+2528 | | ┩ | U+2529 | | ┪ | U+252A | | ┫ | U+252B |
+| ┬ | U+252C | | ┭ | U+252D | | ┮ | U+252E | | ┯ | U+252F |
+| ┰ | U+2530 | | ┱ | U+2531 | | ┲ | U+2532 | | ┳ | U+2533 |
+| ┴ | U+2534 | | ┵ | U+2535 | | ┶ | U+2536 | | ┷ | U+2537 |
+| ┸ | U+2538 | | ┹ | U+2539 | | ┺ | U+253A | | ┻ | U+253B |
+| ┼ | U+253C | | ┽ | U+253D | | ┾ | U+253E | | ┿ | U+253F |
+| ╀ | U+2540 | | ╁ | U+2541 | | ╂ | U+2542 | | ╃ | U+2543 |
+| ╄ | U+2544 | | ╅ | U+2545 | | ╆ | U+2546 | | ╇ | U+2547 |
+| ╈ | U+2548 | | ╉ | U+2549 | | ╊ | U+254A | | ╋ | U+254B |
+| ═ | U+2550 | | ╞ | U+255E | | ╡ | U+2561 | | ╪ | U+256A |
+| ╭ | U+256D | | ╮ | U+256E | | ╯ | U+256F | | ╰ | U+2570 |
+| ╱ | U+2571 | | ╲ | U+2572 | | ╳ | U+2573 | | | |
 
-Supported: ■ U+25A0, □ U+25A1, ▣ U+25A3, ▤ U+25A4, ▥ U+25A5, ▦ U+25A6, ▧ U+25A7, ▨ U+25A8, ▩ U+25A9, ▲ U+25B2, △ U+25B3, ▶ U+25B6, ▷ U+25B7, ▼ U+25BC, ▽ U+25BD, ◀ U+25C0, ◁ U+25C1, ◆ U+25C6, ◇ U+25C7, ◈ U+25C8, ◊ U+25CA, ○ U+25CB, ◌ U+25CC, ◎ U+25CE, ● U+25CF, ◐ U+25D0, ◑ U+25D1, ◢ U+25E2, ◣ U+25E3, ◤ U+25E4, ◥ U+25E5, ◯ U+25EF
+**Block Elements (U+2580–U+2595)** – lower blocks, left blocks, full block, and a few others:
 
-Missing: most other geometric shapes including small squares (U+25AA–U+25AB), rectangles, small triangles, circle segments, and everything from U+25F0 onward.
+| Char | Code | Name |
+|------|------|------|
+| ▁ | U+2581 | Lower one eighth block |
+| ▂ | U+2582 | Lower one quarter block |
+| ▃ | U+2583 | Lower three eighths block |
+| ▄ | U+2584 | Lower half block |
+| ▅ | U+2585 | Lower five eighths block |
+| ▆ | U+2586 | Lower three quarters block |
+| ▇ | U+2587 | Lower seven eighths block |
+| █ | U+2588 | Full block |
+| ▉ | U+2589 | Left seven eighths block |
+| ▊ | U+258A | Left three quarters block |
+| ▋ | U+258B | Left five eighths block |
+| ▌ | U+258C | Left half block |
+| ▍ | U+258D | Left three eighths block |
+| ▎ | U+258E | Left one quarter block |
+| ▏ | U+258F | Left one eighth block |
+| ▒ | U+2592 | Medium shade |
+| ▔ | U+2594 | Upper one eighth block |
+| ▕ | U+2595 | Right one eighth block |
 
-**Arrows (U+2190–U+21FF)** – only basic arrows supported:
+**Geometric Shapes (U+25A0–U+25EF)** – selective support:
 
-Supported: ← U+2190, ↑ U+2191, → U+2192, ↓ U+2193, ↔ U+2194, ↕ U+2195, ↖ U+2196, ↗ U+2197, ↘ U+2198, ↙ U+2199, ⇒ U+21D2, ⇔ U+21D4
+| Char | Code | | Char | Code | | Char | Code | | Char | Code |
+|------|------|-|------|------|-|------|------|-|------|------|
+| ■ | U+25A0 | | □ | U+25A1 | | ▣ | U+25A3 | | ▤ | U+25A4 |
+| ▥ | U+25A5 | | ▦ | U+25A6 | | ▧ | U+25A7 | | ▨ | U+25A8 |
+| ▩ | U+25A9 | | ▲ | U+25B2 | | △ | U+25B3 | | ▶ | U+25B6 |
+| ▷ | U+25B7 | | ▼ | U+25BC | | ▽ | U+25BD | | ◀ | U+25C0 |
+| ◁ | U+25C1 | | ◆ | U+25C6 | | ◇ | U+25C7 | | ◈ | U+25C8 |
+| ◊ | U+25CA | | ○ | U+25CB | | ◌ | U+25CC | | ◎ | U+25CE |
+| ● | U+25CF | | ◐ | U+25D0 | | ◑ | U+25D1 | | ◢ | U+25E2 |
+| ◣ | U+25E3 | | ◤ | U+25E4 | | ◥ | U+25E5 | | ◯ | U+25EF |
 
-Missing: all other arrows (U+219A–U+21FF) including double arrows (except ⇒ and ⇔), dashed arrows, wavy arrows, etc.
+**Misc Symbols (U+2605–U+261E)** – only seven characters:
 
-**Misc Symbols (U+2600–U+263F)** – mostly missing:
+| Char | Code | | Char | Code | | Char | Code |
+|------|------|-|------|------|-|------|------|
+| ★ | U+2605 | | ☆ | U+2606 | | ☉ | U+2609 |
+| ☎ | U+260E | | ☏ | U+260F | | ☜ | U+261C |
+| ☞ | U+261E | | | | | | |
 
-Supported: ★ U+2605, ☆ U+2606, ☉ U+2609, ☎ U+260E, ☏ U+260F, ☜ U+261C, ☞ U+261E
+#### Useful combinations for apps
 
-Missing: ☀ ☁ ☂ ☃ (weather symbols), ☠ ☢ ☣ (hazard), ☮ ☯ (peace/yin-yang), ☺ ☻ (faces), and most other misc symbols.
-
-**Entirely missing ranges:**
-
-- Dingbats (U+2700–U+273F) – none supported
-- Weather emoji (U+1F300–U+1F321, U+1F324–U+1F32C) – none supported
-- Misc weather symbols (U+26C4–U+26C8) – none supported (⛄ ⛅ etc.)
-- Snowflake U+2744 ❄ – missing
-- Droplet U+1F4A7 💧 – missing
-
-#### Useful characters for apps
-
-For progress bars and UI:
+Progress bars and UI:
 - `━` U+2501, `─` U+2500 – thick/thin horizontal lines
-- `█` U+2588, `▇▆▅▄▃▂▁` U+2587–U+2581 – full block and lower fractional blocks
-- `▏▎▍▌▋▊▉` U+258F–U+2589 – left fractional blocks
-- `▒` U+2592 – medium shade
+- `█▇▆▅▄▃▂▁` U+2588–U+2581 – full block + lower fractional blocks (8 levels)
+- `▉▊▋▌▍▎▏` U+2589–U+258F – left fractional blocks (7 levels)
+- `▒` U+2592 – medium shade (empty fill)
 
-For game/diagram rendering:
-- `●` U+25CF, `○` U+25CB – filled/empty circles
-- `■` U+25A0, `□` U+25A1 – filled/empty squares
-- `▲△▶▷▼▽◀◁` – large triangles in all directions
-- `◢◣◤◥` U+25E2–U+25E5 – corner triangles
-- `│` U+2502, `─` U+2500 – vertical/horizontal lines
-- `┌┐└┘├┤┬┴┼` – box drawing corners and intersections
-- `★☆` U+2605–U+2606 – stars
+Games and diagrams:
+- `●○` – filled/empty circles; `■□` – filled/empty squares
+- `▲△▶▷▼▽◀◁` – directional triangles
+- `◢◣◤◥` – corner triangles
+- `─│┌┐└┘├┤┬┴┼` – box drawing
+- `╭╮╯╰` – rounded corners
+- `★☆` – stars
+
+#### Missing glyphs
+
+**ASCII/Latin (U+00A0–U+00FF)** – five characters missing:
+
+| Char | Code | Name |
+|------|------|------|
+| ¨ | U+00A8 | Diaeresis |
+| ¯ | U+00AF | Macron |
+| ´ | U+00B4 | Acute accent |
+| µ | U+00B5 | Micro sign |
+| ¸ | U+00B8 | Cedilla |
+
+**Arrows** – everything outside the 12 listed above is missing (U+219A–U+21D1, U+21D3, U+21D5–U+21FF), including most double arrows, dashed arrows, and wavy arrows.
+
+**Box Drawing** – missing subsets:
+- U+2504–U+250B – dashed/dotted lines (┄ ┅ ┆ ┇ ┈ ┉ ┊ ┋)
+- U+254C–U+254F – dash variants (╌ ╍ ╎ ╏)
+- U+2551–U+255D (except U+2550) – most double-line characters
+- U+255F–U+2560, U+2562–U+2569, U+256B–U+256C – double-line intersections
+- U+2574–U+257F – half-line segments (╴ ╵ ╶ ╷ ╸ ╹ ╺ ╻ ╼ ╽ ╾ ╿)
+
+**Block Elements** – missing from the range:
+
+| Char | Code | Name |
+|------|------|------|
+| ▀ | U+2580 | Upper half block |
+| ▐ | U+2590 | Right half block |
+| ░ | U+2591 | Light shade |
+| ▓ | U+2593 | Dark shade |
+| ▖–▟ | U+2596–U+259F | All quadrant characters |
+
+**Geometric Shapes** – missing: small squares (U+25AA–U+25AB), rectangles, small triangles, circle segments, and everything from U+25F0 onward.
+
+**Misc Symbols** – missing: ☀ ☁ ☂ ☃ (weather), ☠ ☢ ☣ (hazard), ☮ ☯ (peace/yin-yang), ☺ ☻ (faces), and most other symbols in U+2600–U+263F.
+
+**Entirely absent ranges:**
+- Dingbats (U+2700–U+273F)
+- Emoji (U+1F300+)
+- Misc weather symbols (U+26C4–U+26C8 – ⛄ ⛅ etc.)
+- Snowflake (U+2744 ❄), droplet (U+1F4A7 💧)
 
 ### List containers (`ListContainerProperty`)
 
