Add card suits, typographic symbols, super/subscripts, and fractions to supported Unicode set

--- a/G2.md
+++ b/G2.md
@@ -295,13 +295,40 @@ Tested on the Even Hub Simulator (`@evenrealities/evenhub-simulator` v0.0.7, Feb
 | ● | U+25CF | | ◐ | U+25D0 | | ◑ | U+25D1 | | ◢ | U+25E2 |
 | ◣ | U+25E3 | | ◤ | U+25E4 | | ◥ | U+25E5 | | ◯ | U+25EF |
 
-**Misc Symbols (U+2605–U+261E)** – only seven characters:
+**Misc Symbols (U+2605–U+2667)** – thirteen characters:
 
 | Char | Code | | Char | Code | | Char | Code |
 |------|------|-|------|------|-|------|------|
 | ★ | U+2605 | | ☆ | U+2606 | | ☉ | U+2609 |
 | ☎ | U+260E | | ☏ | U+260F | | ☜ | U+261C |
-| ☞ | U+261E | | | | | | |
+| ☞ | U+261E | | ♠ | U+2660 | | ♡ | U+2661 |
+| ♣ | U+2663 | | ♤ | U+2664 | | ♥ | U+2665 |
+| ♧ | U+2667 | | | | | | |
+
+**Typographic symbols**
+
+| Char | Code | | Char | Code | | Char | Code |
+|------|------|-|------|------|-|------|------|
+| © | U+00A9 | | ® | U+00AE | | ™ | U+2122 |
+| † | U+2020 | | ※ | U+203B | | ° | U+00B0 |
+| ∞ | U+221E | | | | | | |
+
+**Superscripts and subscripts**
+
+| Char | Code | | Char | Code | | Char | Code | | Char | Code |
+|------|------|-|------|------|-|------|------|-|------|------|
+| ⁰ | U+2070 | | ¹ | U+00B9 | | ² | U+00B2 | | ³ | U+00B3 |
+| ⁴ | U+2074 | | ⁵ | U+2075 | | ⁶ | U+2076 | | ⁷ | U+2077 |
+| ⁸ | U+2078 | | ⁹ | U+2079 | | | | | | |
+| ₀ | U+2080 | | ₁ | U+2081 | | ₂ | U+2082 | | ₃ | U+2083 |
+| ₄ | U+2084 | | ₅ | U+2085 | | ₆ | U+2086 | | ₇ | U+2087 |
+| ₈ | U+2088 | | ₉ | U+2089 | | | | | | |
+
+**Fractions**
+
+| Char | Code | | Char | Code | | Char | Code |
+|------|------|-|------|------|-|------|------|
+| ¼ | U+00BC | | ½ | U+00BD | | ⅛ | U+215B |
 
 #### Useful combinations for apps
 
@@ -318,6 +345,7 @@ Games and diagrams:
 - `─│┌┐└┘├┤┬┴┼` – box drawing
 - `╭╮╯╰` – rounded corners
 - `★☆` – stars
+- `♠♤` `♥♡` `♣♧` – card suits (filled/empty)
 
 #### Missing glyphs
 
